# hw

./: .gitignore  .gitmodules  environment.yml
chemistry/ZIF67-2dec2021/: CV-3uL.txt  CV-4uL.txt  CV-5uL.txt  CV-6uL.txt  CV-7uL.txt  CV-excel.txt  Unknown.txt  bare-group3.csv  data-cal-cv.ipynb  data-cal-it.ipynb  data-pro.ipynb  i-t-1.txt  i-t-2.txt  i-t-3.txt  i-t-4.txt
chemistry/smart_life_31dec2021/: README.md  ree.bib  thesis.tex
chemistry/smart_life_31dec2021/contents/: chutan.tex
eie_car_software/src/synamic-class/: CMakeLists.txt  package.xml
eie_car_software/src/synamic-class/include/eie_car_software/: assest.hpp
eie_car_software/src/synamic-class/src/: assest.cpp
human/: README.md
human/jack-source/: 20203906-gxx-4.env  20203906-gxx-4.tsf  Crate.fig  LargeCrate_0.fig  Rack.fig  arm-work.pss  arm-work1.pss  arm.pss  arm_work_right0.pss  back.pss  base.pss  chairmain.pss  cube.pss  factory.fig  female_v61s.fig
human/unity/: README.md
human/unity/Assets/Models/Tower_test/: ControlPanel.prefab
human/unity/Assets/Scripts/: flask_op.py  tower.cs
human/unity/Assets/python/Scene/: best_one.unity
human/unity/WorkShopPackage/: README-ZH-CN.txt  README.txt
linear_algebra/: README.md  class1-without-jit.ipynb  class1.ipynb  hw1.py  hw2.py  kernel.csv  recognition.ipynb  requirements.txt  result.csv  utils.csv
linear_algebra/paper/: README.md  pca.bib  thesis.tex
linear_algebra/paper/content/: appendix.tex  conclusion.tex  experiment.tex  framework.tex  introduction.tex  theory.tex
ros/jan10_2022/: CMakeLists.txt  car  car.cpp  main.cpp
ros/jan10_2022/include/car/: car.hpp
ros/mar20_2022/: CMakeLists.txt  README.md  package.xml
ros/mar20_2022/launch/: single.launch
ros/mar20_2022/scripts/: bridge.py
ros/rm2_base/: CMakeLists.txt  package.xml
ros/rm2_base/include/rm2_base/: rm2_base.hpp  visibility_control.h
ros/rm2_base/src/: rm2_base.cpp  rm2_base_node.cpp
